--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       --dark-grey-blue: #626e88;
       --transparent: #fff0;
       --ash-blue: #dee6ef;
+
       /* New theme variables from provided code */
       --color_theme_bg_pop: #13ce74;
       --background_pop: #13ce74;
@@ -144,7 +145,7 @@
     .group-title.expanded::after {
       content: "▼";
     }
-    /* Default state: groups collapsed, no grey background, no border */
+    /* Default state: groups collapsed, no grey background or border */
     .group .group-content {
       display: none;
       margin-top: 10px;
@@ -211,7 +212,7 @@
       overflow-y: auto;
     }
 
-    /* Content area (chart + controls) */
+    /* Content area */
     #content {
       flex-grow: 1;
       padding: 1rem;
@@ -221,42 +222,32 @@
       border-radius: 8px;
     }
 
-    #chartControls {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      margin-bottom: 1rem;
-    }
-    #chartControls label {
-      margin: 0;
-      font-weight: 600;
-      white-space: nowrap;
-    }
-    #chartControls select {
-      min-width: 150px;
-      padding: 0.4rem;
-      border: 1px solid var(--grey-blue);
-      border-radius: 4px;
+    /* The chart boxes */
+    .chart-box {
       background: var(--white);
-      color: var(--slate-blue);
+      border: 1px solid var(--grey-blue);
+      border-radius: 6px;
+      margin-bottom: 20px;
+      padding: 1rem;
+      display: flex;
+      flex-direction: column;
+      /* Make chart fill up the box */
+      height: 100%;
     }
-    #chartControls button {
-      padding: 8px 15px;
-      font-size: 0.9em;
-      border: none;
-      border-radius: 4px;
-      background-color: var(--color_theme_bg_pop);
-      color: var(--slate-blue);
-      cursor: pointer;
-      transition: background-color 0.2s;
+    .chart-box h3 {
+      margin: 0 0 0.5rem;
+      font-size: 1.2em;
     }
-    #chartControls button:hover {
-      background-color: var(--background_pop_darken);
+    .chart-container {
+      flex: 1;
+      position: relative;
+      width: 100%;
+      height: 100%;
     }
-
-    #chartSection {
-      flex-grow: 1;
-      min-height: 600px;
+    /* Make the canvas fill the container */
+    .chart-container canvas {
+      width: 100% !important;
+      height: 100% !important;
     }
 
     @media screen and (max-width: 767px) {
@@ -295,6 +286,7 @@
   <script src="https://unpkg.com/@popperjs/core@2"></script>
   <script src="https://unpkg.com/tippy.js@6"></script>
   <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/animations/scale.css"/>
+
   <script>
     // Set Chart.js default font family and size
     Chart.defaults.font.family = 'Poppins, sans-serif';
@@ -306,105 +298,105 @@
   <header class="container">
     <h1>LCOE Calculator</h1>
     <p class="disclaimer">
-      This is a high-level LCOE model, built with AI assistance. 
+      This is a high-level LCOE model, built with AI assistance.
       All numbers and assumptions are illustrative only and should not be taken as precise forecasts.
     </p>
   </header>
 
   <div class="container sim-container">
-    <!-- Sidebar with LCOE parameters -->
+    <!-- SIDEBAR with collapsible groups -->
     <div id="sidebar">
       <h2>Model parameters</h2>
 
-      <!-- System Configuration Group -->
+      <!-- Example group: System Config -->
       <div class="group">
         <h3 class="group-title collapsed" onclick="toggleGroup(this)">System Configuration</h3>
         <div class="group-content">
           <fieldset>
             <legend>Capacities</legend>
             <label for="solarCap" data-tippy-content="Solar capacity in GW.">Solar Capacity (GW):</label>
-            <input type="number" id="solarCap" value="6" step="0.1">
+            <input type="number" id="solarCap" value="6" step="0.1" />
 
             <label for="batteryCap" data-tippy-content="Battery capacity in GWh.">Battery Capacity (GWh):</label>
-            <input type="number" id="batteryCap" value="10" step="1">
+            <input type="number" id="batteryCap" value="10" step="1" />
           </fieldset>
         </div>
       </div>
 
-      <!-- Assumptions Group -->
+      <!-- Example group: Assumptions -->
       <div class="group">
         <h3 class="group-title collapsed" onclick="toggleGroup(this)">Assumptions</h3>
         <div class="group-content">
           <fieldset>
             <legend>Costs</legend>
             <label for="gasCapex">Gas Capex (GBP/kW):</label>
-            <input type="number" id="gasCapex" value="800" step="1">
+            <input type="number" id="gasCapex" value="800" step="1" />
 
             <label for="solarCapex">Solar Capex (GBP/kW):</label>
-            <input type="number" id="solarCapex" value="450" step="1">
+            <input type="number" id="solarCapex" value="450" step="1" />
 
             <label for="batteryCapex">Battery Capex (GBP/kWh):</label>
-            <input type="number" id="batteryCapex" value="200" step="1">
+            <input type="number" id="batteryCapex" value="200" step="1" />
           </fieldset>
 
           <fieldset>
             <legend>O&amp;M</legend>
             <label for="gasFixedOM">Gas Fixed O&amp;M (GBP/MW/yr):</label>
-            <input type="number" id="gasFixedOM" value="18000" step="100">
+            <input type="number" id="gasFixedOM" value="18000" step="100" />
 
             <label for="solarFixedOM">Solar Fixed O&amp;M (GBP/MW/yr):</label>
-            <input type="number" id="solarFixedOM" value="8000" step="100">
+            <input type="number" id="solarFixedOM" value="8000" step="100" />
 
             <label for="batteryFixedOM">Battery Fixed O&amp;M (GBP/MW/yr):</label>
-            <input type="number" id="batteryFixedOM" value="6000" step="100">
+            <input type="number" id="batteryFixedOM" value="6000" step="100" />
 
             <label for="gasVarOM">Gas Variable O&amp;M (GBP/MWh):</label>
-            <input type="number" id="gasVarOM" value="4" step="1">
+            <input type="number" id="gasVarOM" value="4" step="1" />
 
             <label for="gasFuel">Gas Fuel (GBP/MWh):</label>
-            <input type="number" id="gasFuel" value="40" step="1">
+            <input type="number" id="gasFuel" value="40" step="1" />
           </fieldset>
 
           <fieldset>
             <legend>Other</legend>
             <label for="gasEfficiency">Gas Efficiency (%):</label>
-            <input type="number" id="gasEfficiency" value="45" step="1">
+            <input type="number" id="gasEfficiency" value="45" step="1" />
 
             <label for="inverterRatio">Inverter Ratio:</label>
-            <input type="number" id="inverterRatio" value="1.2" step="0.1">
+            <input type="number" id="inverterRatio" value="1.2" step="0.1" />
 
             <label for="waccFossil">WACC Fossil (%):</label>
-            <input type="number" id="waccFossil" value="8" step="0.1">
+            <input type="number" id="waccFossil" value="8" step="0.1" />
 
             <label for="waccRenew">WACC Renewables (%):</label>
-            <input type="number" id="waccRenew" value="5" step="0.1">
+            <input type="number" id="waccRenew" value="5" step="0.1" />
 
             <label for="lifetimeFossil">Lifetime (fossil) (yrs):</label>
-            <input type="number" id="lifetimeFossil" value="25" step="1">
+            <input type="number" id="lifetimeFossil" value="25" step="1" />
 
             <label for="lifetimeSolar">Lifetime (solar) (yrs):</label>
-            <input type="number" id="lifetimeSolar" value="35" step="1">
+            <input type="number" id="lifetimeSolar" value="35" step="1" />
           </fieldset>
         </div>
       </div>
     </div>
 
-    <!-- Main content: chart controls and canvas -->
+    <!-- MAIN CONTENT: Two chart boxes with horizontal bars -->
     <div id="content">
-      <div id="chartControls">
-        <label for="chartType">Chart type:</label>
-        <select id="chartType">
-          <option value="yearly">Yearly Profile</option>
-          <option value="jan">January</option>
-          <option value="jul">July</option>
-          <option value="mix">Generation Mix</option>
-          <option value="lcoe">LCOE Breakdown</option>
-        </select>
-        <button type="button" id="runModelBtn">Run Model</button>
+      <!-- 1) Generation Mix (Horizontal) -->
+      <div class="chart-box">
+        <h3>Generation Mix (Horizontal Bar)</h3>
+        <div class="chart-container">
+          <canvas id="genMixChart"></canvas>
+        </div>
       </div>
 
-      <div id="chartSection">
-        <canvas id="chartCanvas"></canvas>
+      <!-- 2) LCOE Breakdown (Horizontal) -->
+      <div class="chart-box">
+        <h3>LCOE Breakdown (Horizontal Bar)</h3>
+        <div class="chart-container">
+          <canvas id="lcoeChart"></canvas>
+        </div>
       </div>
     </div>
   </div>
@@ -429,23 +421,17 @@
     }
 
     document.addEventListener("DOMContentLoaded", function() {
-      // Ensure all group titles are collapsed by default.
+      // Collapse all groups by default
       document.querySelectorAll('.group-title').forEach(el => {
         el.classList.add("collapsed");
         const content = el.nextElementSibling;
         content.style.display = "none";
       });
+      // Initialize Tippy if needed
       tippy('[data-tippy-content]', {
         animation: 'scale',
         theme: 'light-border'
       });
-    });
-
-    // (Placeholder) For hooking up the chart logic in your model.js
-    // Example usage:
-    document.getElementById('runModelBtn').addEventListener('click', () => {
-      // call runModel or similar from your "model.js"
-      console.log("Run Model clicked!");
     });
   </script>
 </body>
